--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-Hello world
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
+            rel="stylesheet"
+        />
+
+        <link rel="stylesheet" href="/css/common.css" />
+        <link rel="stylesheet" href="/style.css" />
+
+        <title>Zeyuan Cao's Homepage</title>
+    </head>
+    <body>
+        <header class="header">
+            <h1 class="name">Zeyuan Cao</h1>
+
+            <nav class="main-nav">
+                <ul class="main-nav-list">
+                    <li>
+                        <a class="main-nav-link" href="projects/">Projects</a>
+                    </li>
+                    <li>
+                        <a class="main-nav-link" href="aboutme/">About Me</a>
+                    </li>
+                    <li>
+                        <a class="main-nav-link" href="contact/">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+
+        <div class="container">
+            <div class="text-box">
+                <p>
+                    I'm Zeyuan Cao, a Master's student majoring in computer
+                    science at Northeastern University. I hold a Bachelor's
+                    degree in Mathematics and have gained valuable internship
+                    experience in financial companies. Currently, I am exploring
+                    opportunities in the software engineering field, actively
+                    acquiring new skills, and seeking connections with people
+                    from diverse backgrounds in the tech industry.
+                </p>
+                <br />
+                <p>
+                    Beyond my passion for software engineering, I am also an
+                    avid climber, splitting my time between coding, the climbing
+                    gym, and beautiful outdoor rocks.
+                </p>
+                <br />
+                <p>
+                    For more details about my past experiences and to get in
+                    touch, please click on the links in the navbar.
+                </p>
+            </div>
+            <img class="photo" src="photo.JPG" alt="Photo" />
+        </div>
+    </body>
+</html>
