--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -44,9 +44,9 @@
                 <p>These are from some good old days...</p>
             </div>
             <div class="img-box">
-                <img src="image1.JPG" class="image" alt="test" />
-                <img src="image2.JPEG" class="image" alt="test" />
-                <img src="image3.JPEG" class="image" alt="test" />
+                <img src="image1.png" class="image" alt="image1" />
+                <img src="image2.png" class="image" alt="image2" />
+                <img src="image3.png" class="image" alt="image3" />
             </div>
         </div>
     </body>
